@startuml

title __FILMS's Class Diagram__\n

  package  {
    class Director {
    }
  }
  

  package  {
    class Excel {
    }
  }
  

  package  {
    class Film {
    }
  }
  

  package  {
    class Json {
    }
  }
  

  package  {
    class ListOperations {
    }
  }
  

  package  {
    class Main {
    }
  }
  

  package  {
    interface Readable {
    }
  }
  

  package  {
    class UrlReader {
    }
  }
  

  package  {
    interface Writeable {
    }
  }
  

  Excel -up-|> Readable
  Excel -up-|> Writeable
  Film o-- Director : director
  Json -up-|> Writeable
  Json -up-|> Readable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
